--- a/src/components/pfooter/style.scss
+++ b/src/components/pfooter/style.scss
@@ -4,7 +4,6 @@ $icon_size: 40px;
   padding: 4px 0px;
   margin-top: 0px;
   width: 100%;
-  height: 75px;
   position: absolute;
   bottom: 0px;
   background: black;
@@ -21,6 +20,8 @@ $icon_size: 40px;
   flex: none;
   width: 100%;
   height: 24px;
+  position:absolute;
+  bottom:42px;
 }
 
 .rateIt {
