--- a/src/components/pfooter/style.scss
+++ b/src/components/pfooter/style.scss
@@ -1,15 +1,15 @@
 $icon_size: 40px;
 
 .footer {
-  padding: 4px 0px;
-  margin-top: 0px;
+  padding: 0px;
+  margin: 0px;
   width: 100%;
   position: absolute;
   bottom: 0px;
   background: black;
   max-width: 500px;
   vertical-align: bottom;
-
+  height:53px;
 }
 
 .playsc {
@@ -21,7 +21,7 @@ $icon_size: 40px;
   width: 100%;
   height: 24px;
   position:absolute;
-  bottom:42px;
+  bottom:53px;
 }
 
 .rateIt {
@@ -33,15 +33,16 @@ $icon_size: 40px;
 }
 
 .bots {
-  margin: 5px 0;
-  height: 36px;
-  padding: 4px 0;
+  margin:  3px 0;
+  height: 53px;
+  padding: 0;
   width: 100%;
   white-space: normal;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   flex-flow: row wrap;
+  vertical-align:middle;
 }
 
 .lefty {
@@ -51,7 +52,9 @@ $icon_size: 40px;
 }
 
 .buts {
-  margin: auto;
+  height: 53px;
+  top: 3px;
+  position: relative;
 }
 
 .bots button {
@@ -61,6 +64,8 @@ $icon_size: 40px;
   font: bold 12px Comfortaa, sans-serif;
   text-transform: lowercase;
   margin-left: 5px;
+  vertical-align: middle;
+
 }
 
 .wides {
@@ -112,8 +117,10 @@ $icon_size: 40px;
   background-size: contain;
   background-repeat: no-repeat;
   display: inline-block;
-  vertical-align: center;
-  margin-left: 10px;
+  vertical-align: middle;
+  position:absolute;
+  margin-left:  30px;
+  top:0px;
 }
 
 @media (max-width: 479px) {
@@ -122,7 +129,7 @@ $icon_size: 40px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0 auto;
-    padding: 4px !important;;
+    padding: 4px !important;
     padding: var(--mdc-layout-grid-margin-phone, 4px) !important;
   }
   .lefty {
@@ -136,7 +143,7 @@ $icon_size: 40px;
     margin-left: 3px;
   }
   .bots {
-    margin: 3px 0;
+    margin:5px 0;
   }
   .playsc {
     font: bold 18px/25px Comfortaa, sans-serif;
