--- a/src/components/pfooter/style.scss
+++ b/src/components/pfooter/style.scss
@@ -1,7 +1,7 @@
 $icon_size: 40px;
 
 .footer {
-  padding: 4px 0px;
+  padding: 0px;
   margin-top: 0px;
   width: 100%;
   position: absolute;
@@ -9,7 +9,7 @@ $icon_size: 40px;
   background: black;
   max-width: 500px;
   vertical-align: bottom;
-
+  height: 53px;
 }
 
 .playsc {
@@ -20,8 +20,8 @@ $icon_size: 40px;
   flex: none;
   width: 100%;
   height: 24px;
-  position:absolute;
-  bottom:42px;
+  position: absolute;
+  bottom: 53px;
 }
 
 .rateIt {
@@ -33,15 +33,16 @@ $icon_size: 40px;
 }
 
 .bots {
-  margin: 5px 0;
-  height: 36px;
-  padding: 4px 0;
+  margin: 0;
+  height: 53px;
+  padding: 0;
   width: 100%;
   white-space: normal;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   flex-flow: row wrap;
+  position:relative;
 }
 
 .lefty {
@@ -51,7 +52,11 @@ $icon_size: 40px;
 }
 
 .buts {
-  margin: auto;
+  height:53px;
+  position:relative;
+  top:0;
+  vertical-align:top;
+  display: inline-flex;
 }
 
 .bots button {
@@ -60,7 +65,10 @@ $icon_size: 40px;
   color: white !important;
   font: bold 12px Comfortaa, sans-serif;
   text-transform: lowercase;
-  margin-left: 5px;
+  margin: 8px 25px;
+  padding:0;
+  position:relative;
+  vertical-align:top;
 }
 
 .wides {
@@ -112,8 +120,9 @@ $icon_size: 40px;
   background-size: contain;
   background-repeat: no-repeat;
   display: inline-block;
-  vertical-align: center;
-  margin-left: 10px;
+  margin: 0px 0px 0px 10px;
+  position:relative;
+  top:6px;
 }
 
 @media (max-width: 479px) {
@@ -135,9 +144,6 @@ $icon_size: 40px;
     font: bold 10px Comfortaa, sans-serif !important;
     margin-left: 3px;
   }
-  .bots {
-    margin: 3px 0;
-  }
   .playsc {
     font: bold 18px/25px Comfortaa, sans-serif;
   }
@@ -157,9 +163,6 @@ $icon_size: 40px;
     color: white !important;
     font: bold 12px Comfortaa, sans-serif !important;
     margin-left: 2px;
-  }
-  .bots {
-    margin: 3px 0;
   }
   .playsc {
     font: bold 18px/25px Comfortaa, sans-serif;
