--- a/unused/outcome/style.scss
+++ b/unused/outcome/style.scss
@@ -15,7 +15,7 @@
 }
 
 .snoozeIcon {
-  background-image: url("../../src/assets/img/snooze.png");
+  background-image: url("../snooze.png");
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
