--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -1,48 +1,38 @@
 $icon_size: 40px;
 
 .footer {
-  padding: 0px;
-  margin-top: 0px;
+  //padding: 0;
+  //margin-top: 0;
   width: 100%;
-  position: absolute;
-  bottom: 0px;
-  background: black;
-  max-width: 500px;
-  vertical-align: bottom;
-  height: 53px;
+  background: green;
+  //max-width: 500px;
+  //vertical-align: bottom;
+  height: 24px;
+  z-index:6;
+  position:fixed;
 }
 
 .playsc {
   background: white;
   font: bold 20px/24px Comfortaa, sans-serif;
   color: #000;
-  padding: 0px 4px;
-  flex: none;
   width: 100%;
   height: 24px;
-  position: absolute;
-  bottom: 53px;
-}
-
-.rateIt {
-  text-align: left;
   position: relative;
-  margin: 15px auto;
-  font: bold 21px/24px Comfortaa, sans-serif;
-
+  bottom: 0px;
+  margin:0 auto;
 }
+
+//.rateIt {
+//  text-align: left;
+//  position: relative;
+//  margin: 15px auto;
+//  font: bold 21px/24px Comfortaa, sans-serif;
+//
+//}
 
 .bots {
-  margin: 0;
-  height: 53px;
-  padding: 0;
-  width: 100%;
-  white-space: normal;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  flex-flow: row wrap;
-  position:relative;
+  //margin: 0;
 }
 
 .lefty {
@@ -52,7 +42,7 @@ $icon_size: 40px;
 }
 
 .buts {
-  height:53px;
+  height:50px;
   position:relative;
   top:0;
   vertical-align:top;
