--- a/src/routes/game/style.scss
+++ b/src/routes/game/style.scss
@@ -23,11 +23,15 @@ $boxw: 215px;
 .adfooter {
   bottom:0;
   width:100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  flex-flow: row wrap;
-  position:relative;
+  height:50px;
+  margin:0 auto;
+  padding:0;
+  position:absolute;
+  background: #333;
+  vertical-align: bottom;
+  z-index:4;
+  text-align:center;
+
 }
 
 .bonusMsg {
