--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -1,15 +1,10 @@
 $icon_size: 40px;
 
 .footer {
-  //padding: 0;
-  //margin-top: 0;
-  width: 100%;
-  background: green;
-  //max-width: 500px;
-  //vertical-align: bottom;
+  width: inherit;
   height: 24px;
   z-index:6;
-  position:fixed;
+
 }
 
 .playsc {
