--- a/src/routes/game/style.scss
+++ b/src/routes/game/style.scss
@@ -20,20 +20,6 @@ $boxw: 215px;
   border: none;
 }
 
-.adfooter {
-  bottom:0;
-  width:100%;
-  height:50px;
-  margin:0 auto;
-  padding:0;
-  position:absolute;
-  background: #333;
-  vertical-align: bottom;
-  z-index:4;
-  text-align:center;
-
-}
-
 .bonusMsg {
   left: 50%;
   position: absolute;
@@ -70,8 +56,8 @@ $boxw: 215px;
   }
 
 }
-
-.bonusPts {
-  font: Bold 28px/42px 'Comfortaa', sans-serif;
-  display: block;
-}
+//
+//.bonusPts {
+//  font: Bold 28px/42px 'Comfortaa', sans-serif;
+//  display: block;
+//}
