Cleaning up lint

--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -3,8 +3,7 @@ $icon_size: 40px;
 .footer {
   width: inherit;
   height: 24px;
-  z-index:6;
-
+  z-index: 6;
 }
 
 .playsc {
@@ -16,19 +15,25 @@ $icon_size: 40px;
   position: relative;
   bottom: 0px;
   margin:0 auto;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-name: beat;
 }
 
-//.rateIt {
-//  text-align: left;
-//  position: relative;
-//  margin: 15px auto;
-//  font: bold 21px/24px Comfortaa, sans-serif;
-//
-//}
-
-.bots {
-  //margin: 0;
-}
+  @keyframes beat {
+    0%, 100% {
+      background-color: #FCC;
+      letter-spacing: 5px;
+    }
+    30% {
+      background-color: #FFF;
+      letter-spacing: 0px;
+    }
+    60% {
+      background-color: #CCF;
+      letter-spacing: 5px;
+    }
+  }
 
 .lefty {
   width: 90px;
@@ -107,16 +112,18 @@ $icon_size: 40px;
     padding: 4px !important;;
     padding: var(--mdc-layout-grid-margin-phone, 4px) !important;
   }
+
   .lefty {
     margin-top: 10px;
     font: bold 15px/14px Comfortaa, sans-serif;
-
   }
+
   .bots button {
     color: white !important;
     font: bold 10px Comfortaa, sans-serif !important;
     margin-left: 3px;
   }
+
   .playsc {
     font: bold 18px/25px Comfortaa, sans-serif;
   }
@@ -127,11 +134,12 @@ $icon_size: 40px;
   #app {
     width: 320px;
   }
+
   .lefty {
     margin-top: 10px;
     font: bold 13px Comfortaa, sans-serif;
-
   }
+
   .bots button {
     color: white !important;
     font: bold 12px Comfortaa, sans-serif !important;
