Updated Play Bar

--- a/src/components/countdown/style.scss
+++ b/src/components/countdown/style.scss
@@ -44,7 +44,7 @@
   animation-iteration-count: infinite;
   animation-name: colorz;
   background-color: #000;
-
+height:32px;
 }
 
 @keyframes colorz {
