--- a/src/routes/game/style.scss
+++ b/src/routes/game/style.scss
@@ -33,9 +33,11 @@ $boxw: 215px;
   background-image: url("../../assets/img/msgframepink.png");
   background-size: contain;
   background-repeat: no-repeat;
+  padding:24px;
 }
 
 .bonus {
+
   color: white;
   font: Bold 16px 'Comfortaa', sans-serif;
   text-align: center;
