--- a/src/routes/portal/style.scss
+++ b/src/routes/portal/style.scss
@@ -1,7 +1,6 @@
-
-
 .home {
-  padding: 10px;
+  padding: 3px;
+  margin:2px;
   min-height: 100%;
   width: 100%;
   color: white;
@@ -37,7 +36,7 @@
 .box .tile {
   border:1px solid white;
   border-radius:32px;
-  height:150px;
+  height:140px;
   background: -moz-linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
   background: -webkit-linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
   background: linear-gradient(356deg, rgba(2, 0, 36, 1) 0%, rgba(102, 51, 153, 1) 93%);
@@ -45,13 +44,13 @@
 
 }
 .tiletitle {
-  font: bold 18px Comfortaa, sans-serif;
+  font: bold 14px Comfortaa, sans-serif;
   text-shadow: #0b2e13 2px 2px;
   padding:5px;
 }
 .image {
-  max-height:115px;
-  max-width:115px;
+  max-height:105px;
+  max-width:105px;
   min-height:100px;
   margin:auto;
   vertical-align: middle;
