--- a/src/custom.scss
+++ b/src/custom.scss
@@ -4,3 +4,7 @@ $grid-columns: 12 !default;
 $grid-gutter-width: 10px !default;
 // Import Bootstrap and its default variables
 @import 'bootstrap/scss/bootstrap.scss';
+
+body {
+  min-width:inherit !important;
+}
